# Dissertation

./: .gitignore  .travis.yml  LICENSE  Meetings.md  README.md
Code/: Base.hs  ChangeLog.md  Frogger.cabal  README.md
Code/src/: Base.hs  Display.hs  Idle.hs  Input.hs  Main.hs  Type.hs  Update.hs  Util.hs
Docs/DevPlan/: DevPlan.tex
Docs/DevReport/: Report.tex
Docs/FroggerResearch/: Research.tex
Docs/FroggerResearch/vitalius/: .classpath  .project
Docs/FroggerResearch/vitalius/src/frogger/: HeatWave.java  MovingEntity.java
Docs/Plans/SpecReq/: SpecReq.tex
Docs/Proposal/: Gantt.numbers  Proposal.tex
Docs/Report/: Report.tex
Docs/Report/Final/: Report.tex
Docs/Report/Final/Images/: Screenshots.psd
Docs/Report/Interim/: Report.tex
Docs/SpecReq/: SpecReq.tex
Docs/Testing/: results.csv
Docs/Testing/Consent/: Consent.tex
Docs/Testing/Info/: Info.tex
Docs/Testing/Processing/: proc.r  results.csv
Docs/Testing/Protocol/: Protocol.tex
Docs/Testing/Survey/: Survey.tex
Other/: .travis.yml
