name:               Frogger
version:            0.95.0.0
synopsis:           A recreation of the video game Frogger using Haskell
license:            GPL-3
license-file:       LICENSE
author:             Jack
maintainer:         jackellis1504@gmail.com
category:           Game
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

executable Frogger
  main-is:          Main.hs
  other-modules:    Display, Idle, Input, Type
  build-depends:    base >=4.11 && <4.12, gloss
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -Wno-missing-fields
