name:               Frogger
version:            1.0.0
synopsis:           A recreation of the video game Frogger using Haskell
license:            GPL-3
license-file:       LICENSE
author:             4262333
maintainer:         psyje5@nottingham.ac.uk
category:           Game
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

executable Frogger
  main-is:          Main.hs
  other-modules:    Display, Input, Type, Update
  build-depends:    base >=4.11 && <4.12, gloss, random, time
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
